chore("KONFLUX-11519): stop update integration tasks under task folder
* stop update integration tasks under task folder since they are moved
  to konflux-ci/konflux-test-tasks repo
* add operator tasks bundle in external-task folder

Signed-off-by: Hongwei Liu <hongliu@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -42,9 +42,6 @@
 /external-task/clair-scan                       @konflux-ci/integration-service-maintainers
 /external-task/clamav-scan                      @konflux-ci/integration-service-maintainers
 /external-task/deprecated-image-check           @konflux-ci/integration-service-maintainers
-/task/clair-scan                                @konflux-ci/integration-service-maintainers
-/task/clamav-scan                               @konflux-ci/integration-service-maintainers
-/task/deprecated-image-check                    @konflux-ci/integration-service-maintainers
 /task/fbc-fips-check                            @konflux-ci/integration-service-maintainers @konflux-ci/operator-foundry
 /task/fbc-fips-check-oci-ta                     @konflux-ci/integration-service-maintainers @konflux-ci/operator-foundry
 /task/fbc-target-index-pruning-check            @konflux-ci/integration-service-maintainers @konflux-ci/operator-foundry
@@ -66,6 +63,11 @@
 /external-task/sast-snyk-check-oci-ta                @konflux-ci/integration-service-maintainers @sfowl
 /external-task/sast-unicode-check                    @konflux-ci/integration-service-maintainers @sfowl
 /external-task/sast-unicode-check-oci-ta             @konflux-ci/integration-service-maintainers @sfowl
+
+# maintained by konflux-test-tasks, should be ingnored by renovate
+/task/clair-scan                                @konflux-ci/integration-service-maintainers
+/task/clamav-scan                               @konflux-ci/integration-service-maintainers
+/task/deprecated-image-check                    @konflux-ci/integration-service-maintainers
 
 # maintained by konflux-sast-tasks, should be ignored by renovate
 /task/coverity-availability-check           @konflux-ci/integration-service-maintainers @sfowl
