--- a/renovate.json
+++ b/renovate.json
@@ -91,9 +91,6 @@
         "external-task/sast-unicode-check-oci-ta/**",
         "external-task/sast-unicode-check/**",
         "stepactions/fips-operator-check-step-action/**",
-        "task/clair-scan/**",
-        "task/clamav-scan/**",
-        "task/deprecated-image-check/**",
         "task/fbc-fips-check-oci-ta/**",
         "task/fbc-fips-check/**",
         "task/fbc-target-index-pruning-check/**",
@@ -192,6 +189,16 @@
         "task/opm-get-bundle-version/**",
         "task/opm-render-bundles/**"
       ]
+    },
+    {
+      "groupName": "konflux-test-tasks",
+      "description": "Updated and verified in konflux-test-tasks so should be ignored here",
+      "matchFileNames": [
+        "task/clair-scan/**",
+        "task/clamav-scan/**",
+        "task/deprecated-image-check/**"
+      ],
+      "enabled": false
     },
     {
       "groupName": "konflux-sast-tasks",
