feat: selective execution of hermetic tests

--- a/.tekton/pull-request.yaml
+++ b/.tekton/pull-request.yaml
@@ -266,6 +266,8 @@ spec:
             value: $(context.pipelineRun.name)
           - name: revision
             value: "{{revision}}"
+          - name: changed_files
+            value: "$(tasks.task-switchboard.results.changed_files)"
         runAfter:
           - build-bundles
         taskRef:
