feat(STONEINTG-940): improve slack-webhook-notification output
Creation of additional task extract-slack-notification-message
that retrieves additional PR information and formatting
for push failure slack notifications.

Signed-off-by: Josh Everett <jeverett@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -42,6 +42,7 @@
 /external-task/clair-scan                       @konflux-ci/integration-service-maintainers
 /external-task/clamav-scan                      @konflux-ci/integration-service-maintainers
 /external-task/deprecated-image-check           @konflux-ci/integration-service-maintainers
+/task/extract-slack-notification-message        @konflux-ci/integration-service-maintainers
 /task/fbc-fips-check                            @konflux-ci/integration-service-maintainers @konflux-ci/operator-foundry
 /task/fbc-fips-check-oci-ta                     @konflux-ci/integration-service-maintainers @konflux-ci/operator-foundry
 /task/fbc-target-index-pruning-check            @konflux-ci/integration-service-maintainers @konflux-ci/operator-foundry
