--- a/pipelines/core-services/core-services.yaml
+++ b/pipelines/core-services/core-services.yaml
@@ -65,7 +65,7 @@ spec:
   - name: slack-webhook-notification
     params:
     - name: message
-      value: Tekton pipelineRun $(context.pipelineRun.name) failed
+      value: $(tasks.extract-slack-message.results.message)
     - name: key-name
       value: $(params.slack-webhook-notification-team)
     taskRef:
@@ -544,6 +544,13 @@ spec:
       operator: in
       values:
       - "false"
+  - name: extract-slack-message
+    params:
+    - name: pipeline-run-name
+      value: $(context.pipelineRun.name)
+    taskRef:
+      name: extract-slack-notification-message
+      version: "0.1"
   workspaces:
   - name: workspace
   - name: git-auth
