Filter RPMs in hermetic multi-arch builds
In multi-arch builds, a single prefetch is made so that the content from
all target architectures is fetched. This brings the problem that the
SBOM produced by each specific arch will have content from all other
architectures.

In order to solve this, we need to do two things:

1- Allow only the content from a single architecture to be available
to the `buildah bud` command. This is being solved by a small script
added in this commit that solves the problem in each of the versions of
the buildah task

2- Filter out the mixed content from the Hermeto SBOM. This is being
done by the newer version of Mobster¹ which was updated in a previous
commit.

¹See: https://github.com/konflux-ci/mobster/pull/307

Signed-off-by: Bruno Pimentel <bpimente@redhat.com>

--- a/task/buildah-min/0.8/buildah-min.yaml
+++ b/task/buildah-min/0.8/buildah-min.yaml
@@ -6,7 +6,7 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
-    app.kubernetes.io/version: 0.8.1
+    app.kubernetes.io/version: 0.8.2
     build.appstudio.redhat.com/build_type: docker
   name: buildah-min
 spec:
@@ -660,6 +660,23 @@ spec:
 
         cp -r "$(workspaces.source.path)/cachi2" /tmp/
         chmod -R go+rwX /tmp/cachi2
+
+        # In case RPMs were prefetched and this is a multi-arch build,
+        # clean up the packages that do not match the architecture being built
+        RPM_PREFETCH_DIR="/tmp/cachi2/output/deps/rpm"
+        if [ -d "$RPM_PREFETCH_DIR" ] && [ "$(find $RPM_PREFETCH_DIR | wc -l)" -gt 1 ]; then
+          echo "Removing prefetched RPMs from non-matching architectures"
+          PREFETCH_ARCH="$(uname -m)"
+          for path in "$RPM_PREFETCH_DIR"/*; do
+            if [ "$(basename "$path")" != "$PREFETCH_ARCH" ]; then
+              echo "Removing: $path"
+              rm -rf "$path"
+            else
+              echo "Keeping: $path"
+            fi
+          done
+        fi
+
         VOLUME_MOUNTS+=(--volume /tmp/cachi2:/cachi2)
         # Read in the whole file (https://unix.stackexchange.com/questions/533277), then
         # for each RUN ... line insert the cachi2.env command *after* any options like --mount
