--- a/pipelines/package-operator-package/patch.yaml
+++ b/pipelines/package-operator-package/patch.yaml
@@ -9,8 +9,10 @@
   path: /metadata/name
   value: package-operator-package
 - op: replace
-  path: /spec/tasks/3/taskRef/name
-  value: package-operator-package
+  path: /spec/tasks/3/taskRef
+  value:
+    name: package-operator-package
+    version: "0.1"
 - op: add
   path: /spec/tasks/3/params
   value:
