Remove sast-coverity-check from pko pipeline
Check assumes that image is built from Dockerfile, which
it isn't.

--- a/pipelines/package-operator-package/patch.yaml
+++ b/pipelines/package-operator-package/patch.yaml
@@ -23,9 +23,11 @@
 - op: replace
   path: /spec/tasks/3/workspaces
   value:
-  - name: package
+  - name: source
     workspace: workspace
 - op: remove
-  path: /spec/params/4 # dockerfile
-- op: remove
   path: /spec/tasks/16 # push-dockerfile
+- op: remove
+  path: /spec/tasks/11 # sast-coverity-check
+- op: remove
+  path: /spec/params/4 # dockerfile
