chore: archive sast tasks
* Archive sast tasks since they are moved to konflux-ci/konflux-sast-tasks,
  so they won't need konflux reference update PR to update the referenced
  task bundles
    task/coverity-availability-check/0.3
    task/sast-coverity-check/0.3
    task/sast-shell-check-oci-ta/0.1
    task/sast-shell-check/0.1
    task/sast-snyk-check-oci-ta/0.4
    task/sast-snyk-check/0.4
    task/sast-unicode-check-oci-ta/0.3
    task/sast-unicode-check/0.3
* use sast-snyk/unicode-check task bundle in .tekton build pipeline file
  instead of file in build-definitions

Co-authored-by: Erik Skultety eskultet@redhat.com
Signed-off-by: Hongwei Liu hongliu@redhat.com

--- a/.tekton/pull-request.yaml
+++ b/.tekton/pull-request.yaml
@@ -5,7 +5,7 @@ metadata:
   name: build-definitions-pull-request
   annotations:
     pipelinesascode.tekton.dev/on-cel-expression: (event == "pull_request" && target_branch == "main" && ( !has(body.pull_request) || !body.pull_request.draft) ) || (event == "push" && target_branch.startsWith("gh-readonly-queue/main/") && body.head_commit != "null" )
-    pipelinesascode.tekton.dev/task: "[task/git-clone/0.1/git-clone.yaml, task/buildah-remote/0.7/buildah-remote.yaml, task/build-image-index/0.1/build-image-index.yaml, .tekton/tasks/task-lint.yaml, .tekton/tasks/e2e-test.yaml, task/sast-snyk-check/0.4/sast-snyk-check.yaml, task/sast-unicode-check/0.3/sast-unicode-check.yaml, .tekton/tasks/task-switchboard.yaml]"
+    pipelinesascode.tekton.dev/task: "[task/git-clone/0.1/git-clone.yaml, task/buildah-remote/0.7/buildah-remote.yaml, task/build-image-index/0.1/build-image-index.yaml, .tekton/tasks/task-lint.yaml, .tekton/tasks/e2e-test.yaml, .tekton/tasks/task-switchboard.yaml]"
     pipelinesascode.tekton.dev/max-keep-runs: "5"
 spec:
   params:
@@ -82,7 +82,14 @@ spec:
           - name: image-digest
             value: "$(tasks.build-appstudio-utils-index.results.IMAGE_DIGEST)"
         taskRef:
-          name: sast-snyk-check
+          params:
+          - name: name
+            value: sast-snyk-check
+          - name: bundle
+            value: quay.io/konflux-ci/tekton-catalog/task-sast-snyk-check:0.4@sha256:10d6a41c51102c07c0147f2f3d57a2180d58c0cc4af2a022862247edcde5cd54
+          - name: kind
+            value: task
+          resolver: bundles
         workspaces:
           - name: workspace
             workspace: workspace
@@ -113,7 +120,14 @@ spec:
           - name: image-url
             value: "$(tasks.build-appstudio-utils-index.results.IMAGE_URL)"
         taskRef:
-          name: sast-unicode-check
+          params:
+          - name: name
+            value: sast-unicode-check
+          - name: bundle
+            value: quay.io/konflux-ci/tekton-catalog/task-sast-unicode-check:0.3@sha256:bc8f58d5fd484c31266f6f2ee292208066bdbd4010a171ef5a09ebc5f8a0de2d
+          - name: kind
+            value: task
+          resolver: bundles
         workspaces:
           - name: workspace
             workspace: workspace
