--- a/pipelines/docker-build-multi-platform-oci-ta/patch.yaml
+++ b/pipelines/docker-build-multi-platform-oci-ta/patch.yaml
@@ -80,24 +80,26 @@
 
 # Order of pipeline parameters
 # $ kustomize build pipelines/docker-build-oci-ta | yq ".spec.params.[].name" | nl -v 0
-#      0  git-url
-#      1  revision
-#      2  output-image
-#      3  path-context
-#      4  dockerfile
-#      5  rebuild
-#      6  skip-checks
-#      7  hermetic
-#      8  prefetch-input
-#      9  image-expires-after
-#     10  build-source-image
-#     11  build-image-index
-#     12  build-args
-#     13  build-args-file
+#  0	git-url
+#  1	revision
+#  2	output-image
+#  3	path-context
+#  4	dockerfile
+#  5	skip-checks
+#  6	hermetic
+#  7	prefetch-input
+#  8	image-expires-after
+#  9	build-source-image
+# 10	build-image-index
+# 11	buildah-format
+# 12	enable-cache-proxy
+# 13	build-args
+# 14	build-args-file
+# 15	privileged-nested
 
 # We want to always build the image index by default
 - op: replace
-  path: /spec/params/11/default  # build-image-index
+  path: /spec/params/10/default  # build-image-index
   value: "true"
 
 # Add a pipeline definition parameter to customize the build platforms
