--- a/pipelines/maven-zip-build/patch.yaml
+++ b/pipelines/maven-zip-build/patch.yaml
@@ -17,35 +17,35 @@
     "pipelines.openshift.io/strategy": "maven-zip"
 # Remove unused parameters from the template
 # $ yq ".spec.params.[].name"  pipelines/template-build/template-build.yaml | nl -v 0
-#      0  git-url
-#      1  revision
-#      2  output-image
-#      3  path-context
-#      4  dockerfile
-#      5  rebuild
-#      6  skip-checks
-#      7  hermetic
-#      8  prefetch-input
-#      9  image-expires-after
-#     10  build-source-image
-#     11  build-image-index
-#     12  buildah-format
+#  0	git-url
+#  1	revision
+#  2	output-image
+#  3	path-context
+#  4	dockerfile
+#  5	skip-checks
+#  6	hermetic
+#  7	prefetch-input
+#  8	image-expires-after
+#  9	build-source-image
+# 10	build-image-index
+# 11	buildah-format
+# 12	enable-cache-proxy
 
 - op: remove
-  path: /spec/params/12  # buildah-format
+  path: /spec/params/11  # buildah-format
 - op: remove
-  path: /spec/params/11  # build-image-index
+  path: /spec/params/10  # build-image-index
 - op: remove
-  path: /spec/params/10  # build-source-image
+  path: /spec/params/9  # build-source-image
 - op: remove
-  path: /spec/params/7  # hermetic
+  path: /spec/params/6  # hermetic
 - op: remove
   path: /spec/params/4  # dockerfile
 - op: remove
   path: /spec/params/3  # path-context
 # Change default value of prefetch-input
 - op: replace
-  path: /spec/params/5/default
+  path: /spec/params/4/default
   value: "generic"
 # Remove unused tasks
 # kustomize build pipelines/template-build/ | yq ".spec.tasks.[].name" | nl -v 0
