--- a/task/init/0.3/init.yaml
+++ b/task/init/0.3/init.yaml
@@ -2,30 +2,19 @@ apiVersion: tekton.dev/v1
 kind: Task
 metadata:
   labels:
-    app.kubernetes.io/version: "0.2.6"
+    app.kubernetes.io/version: "0.3"
   annotations:
     tekton.dev/pipelines.minVersion: "0.12.1"
     tekton.dev/tags: "konflux"
-    build.appstudio.redhat.com/expires-on: 2026-02-28T00:00:00Z
   name: init
 spec:
   description: >-
-    Initialize Pipeline Task, include flags for rebuild and auth. Generates image repository secret used by the PipelineRun.
+    Initialize Pipeline Task, enables configuration for cache-proxy if required during the PipelineRun.
   params:
-    - name: image-url
-      description: Image URL for build by PipelineRun
-    - name: rebuild
-      description: Rebuild the image if exists
-      default: "false"
-    - name: skip-checks
-      description: Skip checks against built image
-      default: "false"
     - name: enable-cache-proxy
       description: Enable cache proxy configuration
       default: "false"
   results:
-    - name: build
-      description: Defines if the image in param image-url should be built
     - name: http-proxy
       description: HTTP proxy URL for cache proxy (when enable-cache-proxy is true)
     - name: no-proxy
@@ -42,32 +31,13 @@ spec:
           memory: 256Mi
           cpu: 100m
       env:
-        - name: IMAGE_URL
-          value: $(params.image-url)
-        - name: REBUILD
-          value: $(params.rebuild)
-        - name: SKIP_CHECKS
-          value: $(params.skip-checks)
         - name: ENABLE_CACHE_PROXY
           value: $(params.enable-cache-proxy)
       script: |
         #!/bin/bash
-        echo "Build Initialize: $IMAGE_URL"
-        echo
-
-        skopeo_retries=3
 
         default_http_proxy="squid.caching.svc.cluster.local:3128"
         default_no_proxy="brew.registry.redhat.io,docker.io,gcr.io,ghcr.io,images.paas.redhat.com,mirror.gcr.io,nvcr.io,quay.io,registry-proxy.engineering.redhat.com,registry.access.redhat.com,registry.ci.openshift.org,registry.fedoraproject.org,registry.redhat.io,registry.stage.redhat.io,vault.habana.ai"
-
-        echo "Determine if Image Already Exists"
-        # Build the image when rebuild is set to true or image does not exist
-        # The image check comes last to avoid unnecessary, slow API calls
-        if [ "$REBUILD" == "true" ] || [ "$SKIP_CHECKS" == "false" ] || ! skopeo inspect --retry-times "$skopeo_retries" --no-tags --raw "docker://$IMAGE_URL" &>/dev/null; then
-          echo -n "true" > "$(results.build.path)"
-        else
-          echo -n "false" > "$(results.build.path)"
-        fi
 
         # Fetch cluster-config from konflux-info namespace
         echo "Fetching cluster-config from konflux-info namespace..."
