feat(STONEINTG:1424): add roxctl to external tasks
 -  include roxctl-scan task
    within an external tasks

Signed-off-by: nbyrne <nbyrne@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -82,6 +82,7 @@
         "external-task/clamav-scan/**",
         "external-task/coverity-availability-check/**",
         "external-task/deprecated-image-check/**",
+        "external-task/roxctl-scan/**",
         "external-task/sast-coverity-check-oci-ta/**",
         "external-task/sast-coverity-check/**",
         "external-task/sast-shell-check-oci-ta/**",
