prefetch: Use --force option with subscription-manager register
The subscription-manager register command is retried in the
prefetch-dependencies task. But if one of the tries fails and the system
is in fact registered, further retries will fail. Add --force option to
the command that should "register the system even if it is already
registered".

---
https://linux.die.net/man/8/subscription-manager

Signed-off-by: Michal Šoltis <msoltis@redhat.com>

--- a/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.2/prefetch-dependencies-oci-ta.yaml
@@ -377,7 +377,7 @@ spec:
 
           echo "Registering with Red Hat subscription manager."
           export RETRY_MAX_TRIES=6
-          if ! retry subscription-manager register --org "${RHSM_ORG}" --activationkey "${RHSM_ACT_KEY}"; then
+          if ! retry subscription-manager register --force --org "${RHSM_ORG}" --activationkey "${RHSM_ACT_KEY}"; then
             echo "Subscription-manager register failed"
             exit 1
           fi
