--- a/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
+++ b/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
@@ -132,13 +132,6 @@ spec:
       ENTITLEMENT_CERT_PATH=""
       ENTITLEMENT_CERT_KEY_PATH=""
 
-      function rhsm_unregister {
-        # best effort:
-        #   - if the system was already successfully unregistered, the command returns 1
-        #   - if unregistering failed/fails, there's not much we can do about it anyway
-        subscription-manager unregister || true
-      }
-
       function is_json
       {
         jq . 2>/dev/null 1>&2 <<< "$1"
@@ -317,7 +310,7 @@ spec:
         fi
         unset RETRY_MAX_TRIES
 
-        trap rhsm_unregister EXIT
+        trap 'subscription-manager unregister || true' EXIT
 
         entitlement_files="$(ls -1 /etc/pki/entitlement/*.pem)"
         ENTITLEMENT_CERT_KEY_PATH="$(grep -e '-key.pem$' <<< "$entitlement_files")"
@@ -357,12 +350,6 @@ spec:
         -type f \
         -name hermeto.repo \
         -execdir mv {} cachi2.repo \;
-
-      # hack: the OCI generator would delete the function since it doesn't consider trap a "usage"
-      if false; then
-        rhsm_unregister
-      fi
-
   workspaces:
   - name: source
     description: Workspace with the source code, prefetch artifacts will be stored on the workspace as well
